--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -3,30 +3,31 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .body {
   display: flex;
   min-height: 100vh;
   flex-direction: column;
-  background-color: #1f4287;
+  background-color: "white";
 }
 
 .rest-body {
   min-height: 100vh;
 }
 
+.poker {
+  margin-left: 2px;
+}
+
 .container {
-  background-color: #278ea5;
+  background-color: #4592af;
+  -webkit-box-shadow: 0px 4px 30px -1px rgba(0, 0, 0, 0.64);
+  -moz-box-shadow: 0px 4px 30px -1px rgba(0, 0, 0, 0.64);
+  box-shadow: 0px 4px 30px -1px rgba(0, 0, 0, 0.64);
+  margin-top: 15px;
+}
+
+.row.drop {
+  background-color: #071e3d;
 }
 
 .header {
@@ -52,6 +53,7 @@
   color: #000;
   background-color: #21e6c1;
   border-color: #21e6c1;
+  width: 250px;
 }
 
 .btn-primary:hover {
@@ -69,11 +71,18 @@
 .dropdown-item:focus {
   color: #16181b;
   text-decoration: none;
-  background-color: #278ea5;
 }
 
 .dropdown-link {
-  color: #21e6c1;
+  color: #000;
+}
+
+textarea {
+  width: 400px;
+  height: 150px;
+}
+input {
+  height: 50px;
 }
 
 .show > .btn-primary.dropdown-toggle {
@@ -87,7 +96,7 @@
 }
 
 .dropdown-menu {
-  background-color: #1f4287;
+  background-color: "white";
 }
 
 .nav-link {
